--- a/stylesheets/css/all.css
+++ b/stylesheets/css/all.css
@@ -116,8 +116,8 @@
   --bs-focus-ring-color: rgba(221, 173, 213, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
-  --bs-form-invalid-color: #dc3545;
-  --bs-form-invalid-border-color: #dc3545;
+  --bs-form-invalid-color: #00EC00;
+  --bs-form-invalid-border-color: #00EC00;
 }
 
 [data-bs-theme=dark] {
@@ -3091,7 +3091,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2300EC00'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2300EC00' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -3110,7 +3110,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2300EC00'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2300EC00' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -9718,6 +9718,26 @@ textarea.form-control-lg {
   z-index: 3 !important;
 }
 
+.bg-s-cover {
+  background-size: cover !important;
+}
+
+.bg-s-contain {
+  background-size: contain !important;
+}
+
+.bg-s-50 {
+  background-size: 50% !important;
+}
+
+.bg-p-center {
+  background-position: center center !important;
+}
+
+.bg-attachment-fixed {
+  background-attachment: fixed !important;
+}
+
 @media (min-width: 576px) {
   .float-sm-start {
     float: left !important;
@@ -10550,6 +10570,9 @@ textarea.form-control-lg {
   }
   .text-sm-center {
     text-align: center !important;
+  }
+  .bg-p-sm-center {
+    background-position: center center !important;
   }
 }
 @media (min-width: 768px) {
@@ -11385,6 +11408,9 @@ textarea.form-control-lg {
   .text-md-center {
     text-align: center !important;
   }
+  .bg-p-md-center {
+    background-position: center center !important;
+  }
 }
 @media (min-width: 992px) {
   .float-lg-start {
@@ -12218,6 +12244,9 @@ textarea.form-control-lg {
   }
   .text-lg-center {
     text-align: center !important;
+  }
+  .bg-p-lg-center {
+    background-position: center center !important;
   }
 }
 @media (min-width: 1200px) {
@@ -13053,6 +13082,9 @@ textarea.form-control-lg {
   .text-xl-center {
     text-align: center !important;
   }
+  .bg-p-xl-center {
+    background-position: center center !important;
+  }
 }
 @media (min-width: 1400px) {
   .float-xxl-start {
@@ -13887,6 +13919,9 @@ textarea.form-control-lg {
   .text-xxl-center {
     text-align: center !important;
   }
+  .bg-p-xxl-center {
+    background-position: center center !important;
+  }
 }
 @media print {
   .d-print-inline {
@@ -13955,4 +13990,24 @@ textarea.form-control-lg {
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #fbcb00;
   --bs-gradient: none;
+}
+
+.deco-box {
+  height: 240px;
+  width: 240px;
+  background-color: #71ddff;
+}
+
+.bg-cover {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.bg-dark-gradient {
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+}
+
+.btn-outline-primary:hover {
+  color: #fff;
 }/*# sourceMappingURL=all.css.map */
