--- a/stylesheets/components/_utilities.scss
+++ b/stylesheets/components/_utilities.scss
@@ -6,6 +6,10 @@
 .bg-dark-gradient {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
 }
-.btn-outline-primary:hover {
-    color: #fff;
-}
+// .btn-outline-primary:hover {
+//     color: #fff;
+// }
+
+// .btn-outline-primary:hover{
+//     color: color-contrast($dark); // 黑色的對比色為白色
+// }
