--- a/css/all.css
+++ b/css/all.css
@@ -783,142 +783,106 @@ progress {
 
 .col-1 {
   flex: 0 0 auto;
-  width: 6.25%;
+  width: 8.33333333%;
 }
 
 .col-2 {
   flex: 0 0 auto;
-  width: 12.5%;
+  width: 16.66666667%;
 }
 
 .col-3 {
   flex: 0 0 auto;
-  width: 18.75%;
+  width: 25%;
 }
 
 .col-4 {
   flex: 0 0 auto;
-  width: 25%;
+  width: 33.33333333%;
 }
 
 .col-5 {
   flex: 0 0 auto;
-  width: 31.25%;
+  width: 41.66666667%;
 }
 
 .col-6 {
   flex: 0 0 auto;
-  width: 37.5%;
+  width: 50%;
 }
 
 .col-7 {
   flex: 0 0 auto;
-  width: 43.75%;
+  width: 58.33333333%;
 }
 
 .col-8 {
   flex: 0 0 auto;
-  width: 50%;
+  width: 66.66666667%;
 }
 
 .col-9 {
   flex: 0 0 auto;
-  width: 56.25%;
+  width: 75%;
 }
 
 .col-10 {
   flex: 0 0 auto;
-  width: 62.5%;
+  width: 83.33333333%;
 }
 
 .col-11 {
   flex: 0 0 auto;
-  width: 68.75%;
+  width: 91.66666667%;
 }
 
 .col-12 {
-  flex: 0 0 auto;
-  width: 75%;
-}
-
-.col-13 {
-  flex: 0 0 auto;
-  width: 81.25%;
-}
-
-.col-14 {
-  flex: 0 0 auto;
-  width: 87.5%;
-}
-
-.col-15 {
-  flex: 0 0 auto;
-  width: 93.75%;
-}
-
-.col-16 {
   flex: 0 0 auto;
   width: 100%;
 }
 
 .offset-1 {
-  margin-left: 6.25%;
+  margin-left: 8.33333333%;
 }
 
 .offset-2 {
-  margin-left: 12.5%;
+  margin-left: 16.66666667%;
 }
 
 .offset-3 {
-  margin-left: 18.75%;
-}
-
-.offset-4 {
   margin-left: 25%;
 }
 
+.offset-4 {
+  margin-left: 33.33333333%;
+}
+
 .offset-5 {
-  margin-left: 31.25%;
+  margin-left: 41.66666667%;
 }
 
 .offset-6 {
-  margin-left: 37.5%;
-}
-
-.offset-7 {
-  margin-left: 43.75%;
-}
-
-.offset-8 {
   margin-left: 50%;
 }
 
+.offset-7 {
+  margin-left: 58.33333333%;
+}
+
+.offset-8 {
+  margin-left: 66.66666667%;
+}
+
 .offset-9 {
-  margin-left: 56.25%;
-}
-
-.offset-10 {
-  margin-left: 62.5%;
-}
-
-.offset-11 {
-  margin-left: 68.75%;
-}
-
-.offset-12 {
   margin-left: 75%;
 }
 
-.offset-13 {
-  margin-left: 81.25%;
+.offset-10 {
+  margin-left: 83.33333333%;
 }
 
-.offset-14 {
-  margin-left: 87.5%;
-}
-
-.offset-15 {
-  margin-left: 93.75%;
+.offset-11 {
+  margin-left: 91.66666667%;
 }
 
 .g-0,
@@ -1039,65 +1003,49 @@ progress {
   }
   .col-sm-1 {
     flex: 0 0 auto;
-    width: 6.25%;
+    width: 8.33333333%;
   }
   .col-sm-2 {
     flex: 0 0 auto;
-    width: 12.5%;
+    width: 16.66666667%;
   }
   .col-sm-3 {
     flex: 0 0 auto;
-    width: 18.75%;
+    width: 25%;
   }
   .col-sm-4 {
     flex: 0 0 auto;
-    width: 25%;
+    width: 33.33333333%;
   }
   .col-sm-5 {
     flex: 0 0 auto;
-    width: 31.25%;
+    width: 41.66666667%;
   }
   .col-sm-6 {
     flex: 0 0 auto;
-    width: 37.5%;
+    width: 50%;
   }
   .col-sm-7 {
     flex: 0 0 auto;
-    width: 43.75%;
+    width: 58.33333333%;
   }
   .col-sm-8 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 66.66666667%;
   }
   .col-sm-9 {
     flex: 0 0 auto;
-    width: 56.25%;
+    width: 75%;
   }
   .col-sm-10 {
     flex: 0 0 auto;
-    width: 62.5%;
+    width: 83.33333333%;
   }
   .col-sm-11 {
     flex: 0 0 auto;
-    width: 68.75%;
+    width: 91.66666667%;
   }
   .col-sm-12 {
-    flex: 0 0 auto;
-    width: 75%;
-  }
-  .col-sm-13 {
-    flex: 0 0 auto;
-    width: 81.25%;
-  }
-  .col-sm-14 {
-    flex: 0 0 auto;
-    width: 87.5%;
-  }
-  .col-sm-15 {
-    flex: 0 0 auto;
-    width: 93.75%;
-  }
-  .col-sm-16 {
     flex: 0 0 auto;
     width: 100%;
   }
@@ -1105,49 +1053,37 @@ progress {
     margin-left: 0;
   }
   .offset-sm-1 {
-    margin-left: 6.25%;
+    margin-left: 8.33333333%;
   }
   .offset-sm-2 {
-    margin-left: 12.5%;
+    margin-left: 16.66666667%;
   }
   .offset-sm-3 {
-    margin-left: 18.75%;
-  }
-  .offset-sm-4 {
     margin-left: 25%;
   }
+  .offset-sm-4 {
+    margin-left: 33.33333333%;
+  }
   .offset-sm-5 {
-    margin-left: 31.25%;
+    margin-left: 41.66666667%;
   }
   .offset-sm-6 {
-    margin-left: 37.5%;
-  }
-  .offset-sm-7 {
-    margin-left: 43.75%;
-  }
-  .offset-sm-8 {
     margin-left: 50%;
   }
+  .offset-sm-7 {
+    margin-left: 58.33333333%;
+  }
+  .offset-sm-8 {
+    margin-left: 66.66666667%;
+  }
   .offset-sm-9 {
-    margin-left: 56.25%;
-  }
-  .offset-sm-10 {
-    margin-left: 62.5%;
-  }
-  .offset-sm-11 {
-    margin-left: 68.75%;
-  }
-  .offset-sm-12 {
     margin-left: 75%;
   }
-  .offset-sm-13 {
-    margin-left: 81.25%;
+  .offset-sm-10 {
+    margin-left: 83.33333333%;
   }
-  .offset-sm-14 {
-    margin-left: 87.5%;
-  }
-  .offset-sm-15 {
-    margin-left: 93.75%;
+  .offset-sm-11 {
+    margin-left: 91.66666667%;
   }
   .g-sm-0,
   .gx-sm-0 {
@@ -1252,65 +1188,49 @@ progress {
   }
   .col-md-1 {
     flex: 0 0 auto;
-    width: 6.25%;
+    width: 8.33333333%;
   }
   .col-md-2 {
     flex: 0 0 auto;
-    width: 12.5%;
+    width: 16.66666667%;
   }
   .col-md-3 {
     flex: 0 0 auto;
-    width: 18.75%;
+    width: 25%;
   }
   .col-md-4 {
     flex: 0 0 auto;
-    width: 25%;
+    width: 33.33333333%;
   }
   .col-md-5 {
     flex: 0 0 auto;
-    width: 31.25%;
+    width: 41.66666667%;
   }
   .col-md-6 {
     flex: 0 0 auto;
-    width: 37.5%;
+    width: 50%;
   }
   .col-md-7 {
     flex: 0 0 auto;
-    width: 43.75%;
+    width: 58.33333333%;
   }
   .col-md-8 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 66.66666667%;
   }
   .col-md-9 {
     flex: 0 0 auto;
-    width: 56.25%;
+    width: 75%;
   }
   .col-md-10 {
     flex: 0 0 auto;
-    width: 62.5%;
+    width: 83.33333333%;
   }
   .col-md-11 {
     flex: 0 0 auto;
-    width: 68.75%;
+    width: 91.66666667%;
   }
   .col-md-12 {
-    flex: 0 0 auto;
-    width: 75%;
-  }
-  .col-md-13 {
-    flex: 0 0 auto;
-    width: 81.25%;
-  }
-  .col-md-14 {
-    flex: 0 0 auto;
-    width: 87.5%;
-  }
-  .col-md-15 {
-    flex: 0 0 auto;
-    width: 93.75%;
-  }
-  .col-md-16 {
     flex: 0 0 auto;
     width: 100%;
   }
@@ -1318,49 +1238,37 @@ progress {
     margin-left: 0;
   }
   .offset-md-1 {
-    margin-left: 6.25%;
+    margin-left: 8.33333333%;
   }
   .offset-md-2 {
-    margin-left: 12.5%;
+    margin-left: 16.66666667%;
   }
   .offset-md-3 {
-    margin-left: 18.75%;
-  }
-  .offset-md-4 {
     margin-left: 25%;
   }
+  .offset-md-4 {
+    margin-left: 33.33333333%;
+  }
   .offset-md-5 {
-    margin-left: 31.25%;
+    margin-left: 41.66666667%;
   }
   .offset-md-6 {
-    margin-left: 37.5%;
-  }
-  .offset-md-7 {
-    margin-left: 43.75%;
-  }
-  .offset-md-8 {
     margin-left: 50%;
   }
+  .offset-md-7 {
+    margin-left: 58.33333333%;
+  }
+  .offset-md-8 {
+    margin-left: 66.66666667%;
+  }
   .offset-md-9 {
-    margin-left: 56.25%;
-  }
-  .offset-md-10 {
-    margin-left: 62.5%;
-  }
-  .offset-md-11 {
-    margin-left: 68.75%;
-  }
-  .offset-md-12 {
     margin-left: 75%;
   }
-  .offset-md-13 {
-    margin-left: 81.25%;
+  .offset-md-10 {
+    margin-left: 83.33333333%;
   }
-  .offset-md-14 {
-    margin-left: 87.5%;
-  }
-  .offset-md-15 {
-    margin-left: 93.75%;
+  .offset-md-11 {
+    margin-left: 91.66666667%;
   }
   .g-md-0,
   .gx-md-0 {
@@ -1465,65 +1373,49 @@ progress {
   }
   .col-lg-1 {
     flex: 0 0 auto;
-    width: 6.25%;
+    width: 8.33333333%;
   }
   .col-lg-2 {
     flex: 0 0 auto;
-    width: 12.5%;
+    width: 16.66666667%;
   }
   .col-lg-3 {
     flex: 0 0 auto;
-    width: 18.75%;
+    width: 25%;
   }
   .col-lg-4 {
     flex: 0 0 auto;
-    width: 25%;
+    width: 33.33333333%;
   }
   .col-lg-5 {
     flex: 0 0 auto;
-    width: 31.25%;
+    width: 41.66666667%;
   }
   .col-lg-6 {
     flex: 0 0 auto;
-    width: 37.5%;
+    width: 50%;
   }
   .col-lg-7 {
     flex: 0 0 auto;
-    width: 43.75%;
+    width: 58.33333333%;
   }
   .col-lg-8 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 66.66666667%;
   }
   .col-lg-9 {
     flex: 0 0 auto;
-    width: 56.25%;
+    width: 75%;
   }
   .col-lg-10 {
     flex: 0 0 auto;
-    width: 62.5%;
+    width: 83.33333333%;
   }
   .col-lg-11 {
     flex: 0 0 auto;
-    width: 68.75%;
+    width: 91.66666667%;
   }
   .col-lg-12 {
-    flex: 0 0 auto;
-    width: 75%;
-  }
-  .col-lg-13 {
-    flex: 0 0 auto;
-    width: 81.25%;
-  }
-  .col-lg-14 {
-    flex: 0 0 auto;
-    width: 87.5%;
-  }
-  .col-lg-15 {
-    flex: 0 0 auto;
-    width: 93.75%;
-  }
-  .col-lg-16 {
     flex: 0 0 auto;
     width: 100%;
   }
@@ -1531,49 +1423,37 @@ progress {
     margin-left: 0;
   }
   .offset-lg-1 {
-    margin-left: 6.25%;
+    margin-left: 8.33333333%;
   }
   .offset-lg-2 {
-    margin-left: 12.5%;
+    margin-left: 16.66666667%;
   }
   .offset-lg-3 {
-    margin-left: 18.75%;
-  }
-  .offset-lg-4 {
     margin-left: 25%;
   }
+  .offset-lg-4 {
+    margin-left: 33.33333333%;
+  }
   .offset-lg-5 {
-    margin-left: 31.25%;
+    margin-left: 41.66666667%;
   }
   .offset-lg-6 {
-    margin-left: 37.5%;
-  }
-  .offset-lg-7 {
-    margin-left: 43.75%;
-  }
-  .offset-lg-8 {
     margin-left: 50%;
   }
+  .offset-lg-7 {
+    margin-left: 58.33333333%;
+  }
+  .offset-lg-8 {
+    margin-left: 66.66666667%;
+  }
   .offset-lg-9 {
-    margin-left: 56.25%;
-  }
-  .offset-lg-10 {
-    margin-left: 62.5%;
-  }
-  .offset-lg-11 {
-    margin-left: 68.75%;
-  }
-  .offset-lg-12 {
     margin-left: 75%;
   }
-  .offset-lg-13 {
-    margin-left: 81.25%;
+  .offset-lg-10 {
+    margin-left: 83.33333333%;
   }
-  .offset-lg-14 {
-    margin-left: 87.5%;
-  }
-  .offset-lg-15 {
-    margin-left: 93.75%;
+  .offset-lg-11 {
+    margin-left: 91.66666667%;
   }
   .g-lg-0,
   .gx-lg-0 {
@@ -1678,65 +1558,49 @@ progress {
   }
   .col-xl-1 {
     flex: 0 0 auto;
-    width: 6.25%;
+    width: 8.33333333%;
   }
   .col-xl-2 {
     flex: 0 0 auto;
-    width: 12.5%;
+    width: 16.66666667%;
   }
   .col-xl-3 {
     flex: 0 0 auto;
-    width: 18.75%;
+    width: 25%;
   }
   .col-xl-4 {
     flex: 0 0 auto;
-    width: 25%;
+    width: 33.33333333%;
   }
   .col-xl-5 {
     flex: 0 0 auto;
-    width: 31.25%;
+    width: 41.66666667%;
   }
   .col-xl-6 {
     flex: 0 0 auto;
-    width: 37.5%;
+    width: 50%;
   }
   .col-xl-7 {
     flex: 0 0 auto;
-    width: 43.75%;
+    width: 58.33333333%;
   }
   .col-xl-8 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 66.66666667%;
   }
   .col-xl-9 {
     flex: 0 0 auto;
-    width: 56.25%;
+    width: 75%;
   }
   .col-xl-10 {
     flex: 0 0 auto;
-    width: 62.5%;
+    width: 83.33333333%;
   }
   .col-xl-11 {
     flex: 0 0 auto;
-    width: 68.75%;
+    width: 91.66666667%;
   }
   .col-xl-12 {
-    flex: 0 0 auto;
-    width: 75%;
-  }
-  .col-xl-13 {
-    flex: 0 0 auto;
-    width: 81.25%;
-  }
-  .col-xl-14 {
-    flex: 0 0 auto;
-    width: 87.5%;
-  }
-  .col-xl-15 {
-    flex: 0 0 auto;
-    width: 93.75%;
-  }
-  .col-xl-16 {
     flex: 0 0 auto;
     width: 100%;
   }
@@ -1744,49 +1608,37 @@ progress {
     margin-left: 0;
   }
   .offset-xl-1 {
-    margin-left: 6.25%;
+    margin-left: 8.33333333%;
   }
   .offset-xl-2 {
-    margin-left: 12.5%;
+    margin-left: 16.66666667%;
   }
   .offset-xl-3 {
-    margin-left: 18.75%;
-  }
-  .offset-xl-4 {
     margin-left: 25%;
   }
+  .offset-xl-4 {
+    margin-left: 33.33333333%;
+  }
   .offset-xl-5 {
-    margin-left: 31.25%;
+    margin-left: 41.66666667%;
   }
   .offset-xl-6 {
-    margin-left: 37.5%;
-  }
-  .offset-xl-7 {
-    margin-left: 43.75%;
-  }
-  .offset-xl-8 {
     margin-left: 50%;
   }
+  .offset-xl-7 {
+    margin-left: 58.33333333%;
+  }
+  .offset-xl-8 {
+    margin-left: 66.66666667%;
+  }
   .offset-xl-9 {
-    margin-left: 56.25%;
-  }
-  .offset-xl-10 {
-    margin-left: 62.5%;
-  }
-  .offset-xl-11 {
-    margin-left: 68.75%;
-  }
-  .offset-xl-12 {
     margin-left: 75%;
   }
-  .offset-xl-13 {
-    margin-left: 81.25%;
+  .offset-xl-10 {
+    margin-left: 83.33333333%;
   }
-  .offset-xl-14 {
-    margin-left: 87.5%;
-  }
-  .offset-xl-15 {
-    margin-left: 93.75%;
+  .offset-xl-11 {
+    margin-left: 91.66666667%;
   }
   .g-xl-0,
   .gx-xl-0 {
@@ -1891,65 +1743,49 @@ progress {
   }
   .col-xxl-1 {
     flex: 0 0 auto;
-    width: 6.25%;
+    width: 8.33333333%;
   }
   .col-xxl-2 {
     flex: 0 0 auto;
-    width: 12.5%;
+    width: 16.66666667%;
   }
   .col-xxl-3 {
     flex: 0 0 auto;
-    width: 18.75%;
+    width: 25%;
   }
   .col-xxl-4 {
     flex: 0 0 auto;
-    width: 25%;
+    width: 33.33333333%;
   }
   .col-xxl-5 {
     flex: 0 0 auto;
-    width: 31.25%;
+    width: 41.66666667%;
   }
   .col-xxl-6 {
     flex: 0 0 auto;
-    width: 37.5%;
+    width: 50%;
   }
   .col-xxl-7 {
     flex: 0 0 auto;
-    width: 43.75%;
+    width: 58.33333333%;
   }
   .col-xxl-8 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 66.66666667%;
   }
   .col-xxl-9 {
     flex: 0 0 auto;
-    width: 56.25%;
+    width: 75%;
   }
   .col-xxl-10 {
     flex: 0 0 auto;
-    width: 62.5%;
+    width: 83.33333333%;
   }
   .col-xxl-11 {
     flex: 0 0 auto;
-    width: 68.75%;
+    width: 91.66666667%;
   }
   .col-xxl-12 {
-    flex: 0 0 auto;
-    width: 75%;
-  }
-  .col-xxl-13 {
-    flex: 0 0 auto;
-    width: 81.25%;
-  }
-  .col-xxl-14 {
-    flex: 0 0 auto;
-    width: 87.5%;
-  }
-  .col-xxl-15 {
-    flex: 0 0 auto;
-    width: 93.75%;
-  }
-  .col-xxl-16 {
     flex: 0 0 auto;
     width: 100%;
   }
@@ -1957,49 +1793,37 @@ progress {
     margin-left: 0;
   }
   .offset-xxl-1 {
-    margin-left: 6.25%;
+    margin-left: 8.33333333%;
   }
   .offset-xxl-2 {
-    margin-left: 12.5%;
+    margin-left: 16.66666667%;
   }
   .offset-xxl-3 {
-    margin-left: 18.75%;
-  }
-  .offset-xxl-4 {
     margin-left: 25%;
   }
+  .offset-xxl-4 {
+    margin-left: 33.33333333%;
+  }
   .offset-xxl-5 {
-    margin-left: 31.25%;
+    margin-left: 41.66666667%;
   }
   .offset-xxl-6 {
-    margin-left: 37.5%;
-  }
-  .offset-xxl-7 {
-    margin-left: 43.75%;
-  }
-  .offset-xxl-8 {
     margin-left: 50%;
   }
+  .offset-xxl-7 {
+    margin-left: 58.33333333%;
+  }
+  .offset-xxl-8 {
+    margin-left: 66.66666667%;
+  }
   .offset-xxl-9 {
-    margin-left: 56.25%;
-  }
-  .offset-xxl-10 {
-    margin-left: 62.5%;
-  }
-  .offset-xxl-11 {
-    margin-left: 68.75%;
-  }
-  .offset-xxl-12 {
     margin-left: 75%;
   }
-  .offset-xxl-13 {
-    margin-left: 81.25%;
+  .offset-xxl-10 {
+    margin-left: 83.33333333%;
   }
-  .offset-xxl-14 {
-    margin-left: 87.5%;
-  }
-  .offset-xxl-15 {
-    margin-left: 93.75%;
+  .offset-xxl-11 {
+    margin-left: 91.66666667%;
   }
   .g-xxl-0,
   .gx-xxl-0 {
