--- a/stylesheets/components/_utilities.scss
+++ b/stylesheets/components/_utilities.scss
@@ -10,6 +10,6 @@
 //     color: #fff;
 // }
 
-// .btn-outline-primary:hover{
-//     color: color-contrast($dark); // 黑色的對比色為白色
-// }
+.btn-outline-primary:hover{
+    color: color-contrast($dark); // 黑色的對比色為白色
+}
