--- a/css/all.css
+++ b/css/all.css
@@ -13830,4 +13830,8 @@ textarea.form-control-lg {
 
 .bg-dark-gradient {
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+}
+
+.btn-outline-primary:hover {
+  color: #fff;
 }/*# sourceMappingURL=all.css.map */
